// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Button component Renders a button with custom component passed as children 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#CCCCCC",
      "borderRadius": 10,
      "borderWidth": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 5,
      "opacity": 1,
      "padding": 20,
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#CCCCCC",
        "borderRadius": 10,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 5,
        "opacity": 1,
        "padding": 20,
        "width": "100%",
      }
    }
  >
    Hello world
  </View>
</View>
`;

exports[`Testing Button component Renders a button with text passed as children 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#CCCCCC",
      "borderRadius": 10,
      "borderWidth": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 5,
      "opacity": 1,
      "padding": 20,
      "width": "100%",
    }
  }
>
  Hello world
</View>
`;

exports[`Testing Button component Renders a button with text passed as props 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#CCCCCC",
      "borderRadius": 10,
      "borderWidth": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginBottom": 5,
      "opacity": 1,
      "padding": 20,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#404040",
          "fontSize": 22,
          "fontWeight": "600",
        }
      }
    >
      Hello world
    </Text>
  </View>
</View>
`;
